tests/diagnostics/prints_non_str.kal
# prints takes a str, not an integer.
prints(42);
